[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvprobe"
version = "0.1.0"
description = "nvProbe — NVIDIA GPU benchmark suite for CUDA workload automation, reporting, and comparison"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.scripts]
nvprobe = "nvprobe.cli:app"

[project.optional-dependencies]
cuda = ["cupy-cuda12x>=13.0"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
include = ["nvprobe*"]
