[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvprobe"
version = "0.5.44"
description = "NVIDIA GPU benchmark suite for CUDA workload automation, reporting, and comparison"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "SergioZ3R0" },
]
keywords = ["gpu", "nvidia", "cuda", "benchmark", "hpc", "slurm", "mlperf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Benchmark",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/SergioZ3R0/nvprobe"
Repository = "https://github.com/SergioZ3R0/nvprobe"
Issues = "https://github.com/SergioZ3R0/nvprobe/issues"

[project.scripts]
nvprobe = "nvprobe.cli:app"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
cupy-cuda11x = ["cupy-cuda11x[ctk]>=12.0"]
cupy-cuda12x = ["cupy-cuda12x[ctk]>=13.0"]
cupy-cuda13x = ["cupy-cuda13x[ctk]>=13.0"]

[tool.setuptools.packages.find]
include = ["nvprobe*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-data]
nvprobe = ["configs/*.yaml", "nvprobe.svg"]
